--- a/styles/table.css
+++ b/styles/table.css
@@ -76,7 +76,7 @@ input[type=text] {
 
 #tablediv {
     height: 100%;
-    overflow: scroll;
+    
     background-color: #ffffff2e;
     border-radius: 20px;
     padding: 20px;
