--- a/styles/videoplayer.css
+++ b/styles/videoplayer.css
@@ -83,7 +83,7 @@ video:focus {
 }
 
 .topbar {
-    padding: 10px;
+    padding: 5px 0px 7px 0px;
     width: 100%;
     background-color: rgb(255 255 255 / 42%);
     height: fit-content;
@@ -99,11 +99,11 @@ video:focus {
     margin: 10px;
     padding: 10px;
     font-size: 30px;
-    background-color: #9999992e;
+    background-color: #99999940;
     border: none;
     backdrop-filter: inherit;
     border-radius: 10px;
-    box-shadow: 0 0 6px 2px #000;
+    /* box-shadow: 0 0 6px 2px #000; */
 }
 
 .topbar button:hover,
@@ -199,11 +199,11 @@ video:focus {
 @media (prefers-color-scheme: dark) {
 
     p {
-        color: #000000;
+        color: white;
     }
 
     li {
-        background-color: ghostwhite;
+        background-color: #424242a6;
     }
 
     #videoPlayer {
